change web page titles

--- a/productlist.html
+++ b/productlist.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 <head>
-  <title>Underground | Home</title>
+  <title>Underground | Your Products</title>
   <link rel="icon" type="image/png" href="Images&Videos/logo-alt.png" />
 </head>
 
