--- a/search_results.html
+++ b/search_results.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 <head>
-  <title>Underground | Home</title>
+  <title>Underground | Search Results</title>
   <link rel="icon" type="image/png" href="Images&Videos/logo-alt.png" />
 </head>
 
@@ -224,35 +224,35 @@
             <div class="tab-pane fade in show active" id="login" role="tabpanel">
               <div class="modal-body mb-1">
                 <form method="POST" action="test.php" role="form">
-                <div class="form-group">
-                  <div class="md-form form-sm input-group mt-5 mb-5">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="eEmail"><i class="fa fa-envelope prefix"></i></span>
+                  <div class="form-group">
+                    <div class="md-form form-sm input-group mt-5 mb-5">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="eEmail"><i class="fa fa-envelope prefix"></i></span>
+                      </div>
+                      <input type="email" id="Email" class="form-control form-control-sm validate"
+                        placeholder="Email Address" required />
                     </div>
-                    <input type="email" id="Email" class="form-control form-control-sm validate"
-                      placeholder="Email Address" required />
                   </div>
-                </div>
-                <div class="form-group">
-                  <div class="md-form form-sm input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="ePass">
-                        <i class="fa fa-lock prefix"></i>
-                      </span>
+                  <div class="form-group">
+                    <div class="md-form form-sm input-group mb-4">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="ePass">
+                          <i class="fa fa-lock prefix"></i>
+                        </span>
+                      </div>
+                      <input type="password" id="Pass" class="form-control form-control-sm validate"
+                        placeholder="Password" required />
                     </div>
-                    <input type="password" id="Pass" class="form-control form-control-sm validate"
-                      placeholder="Password" required />
                   </div>
-                </div>
-                <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="keepme">
-                  <label class="form-check-label" for="#keepme">Keep me signed in</label>
-                </div>
-                <div class="text-center mt-2">
-                  <button class="btn btn-light">
-                    Log in <i class="fa fa-sign-in ml-1"></i>
-                  </button>
-                </div>
+                  <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="keepme">
+                    <label class="form-check-label" for="#keepme">Keep me signed in</label>
+                  </div>
+                  <div class="text-center mt-2">
+                    <button class="btn btn-light">
+                      Log in <i class="fa fa-sign-in ml-1"></i>
+                    </button>
+                  </div>
                 </form>
               </div>
               <div class="modal-footer">
@@ -270,94 +270,94 @@
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel">
               <div class="modal-body">
-          <form method="POST" action="test.php" role="form">
-                <div class="form-group">
-                  <div class="md-form form-sm input-group mt-5 mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="nEmail"><i class="fa fa-envelope prefix"></i></span>
+                <form method="POST" action="test.php" role="form">
+                  <div class="form-group">
+                    <div class="md-form form-sm input-group mt-5 mb-4">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="nEmail"><i class="fa fa-envelope prefix"></i></span>
+                      </div>
+                      <input type="email" id="newEmail" class="form-control form-control-sm validate"
+                        placeholder="New Email Address" required />
                     </div>
-                    <input type="email" id="newEmail" class="form-control form-control-sm validate"
-                      placeholder="New Email Address" required />
                   </div>
-                </div>
-                <div class="form-group">
-                  <div class="md-form form-sm input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="nUser"><i class="fa fa-user-circle-o prefix"></i></span>
+                  <div class="form-group">
+                    <div class="md-form form-sm input-group mb-4">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="nUser"><i class="fa fa-user-circle-o prefix"></i></span>
+                      </div>
+                      <input type="text" id="username" class="form-control form-control-sm validate rounded-right"
+                        placeholder="Username" aria-describedby="userHelpInline" required />
+                      <small id="userHelpInline" class="text-muted ml-3 mt-1">
+                        *Minimum of 8 characters, must have letters, numbers, and any special characters.
+                      </small>
                     </div>
-                    <input type="text" id="username" class="form-control form-control-sm validate rounded-right"
-                      placeholder="Username" aria-describedby="userHelpInline" required />
-                    <small id="userHelpInline" class="text-muted ml-3 mt-1">
-                      *Minimum of 8 characters, must have letters, numbers, and any special characters.
-                    </small>
                   </div>
-                </div>
 
-                <div class="row">
-                  <div class="col">
-                    <div class="form-group">
-                      <div class="md-form form-sm input-group mb-4">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" id="nFName"><i class="fa fa-user-o prefix"></i></span>
+                  <div class="row">
+                    <div class="col">
+                      <div class="form-group">
+                        <div class="md-form form-sm input-group mb-4">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text" id="nFName"><i class="fa fa-user-o prefix"></i></span>
+                          </div>
+                          <input type="text" id="fname" class="form-control form-control-sm validate"
+                            placeholder="First Name (Optional)" />
                         </div>
-                        <input type="text" id="fname" class="form-control form-control-sm validate"
-                          placeholder="First Name (Optional)" />
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="form-group">
+                        <div class="md-form form-sm input-group mb-4">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text" id="nLName"><i class="fa fa-user-o prefix"></i></span>
+                          </div>
+                          <input type="text" id="lname" class="form-control form-control-sm validate"
+                            placeholder="Last Name (Optional)" />
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="form-group">
-                      <div class="md-form form-sm input-group mb-4">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" id="nLName"><i class="fa fa-user-o prefix"></i></span>
-                        </div>
-                        <input type="text" id="lname" class="form-control form-control-sm validate"
-                          placeholder="Last Name (Optional)" />
+                  <div class="form-group">
+                    <div class="md-form form-sm input-group mb-4">
+                      <div class="input-group-prepend mx">
+                        <span class="input-group-text" id="nPass">
+                          <i class="fa fa-lock prefix"></i>
+                        </span>
                       </div>
+                      <input type="password" id="newPass"
+                        class="form-control form-control-sm validate mx-sm rounded-right" placeholder="New Password"
+                        aria-describedby="passwordHelpInline" required />
+                      <small id="passwordHelpInline" class="text-muted ml-3 mt-1">
+                        *Must be 8-20 characters long.
+                      </small>
                     </div>
                   </div>
-                </div>
-                <div class="form-group">
-                  <div class="md-form form-sm input-group mb-4">
-                    <div class="input-group-prepend mx">
-                      <span class="input-group-text" id="nPass">
-                        <i class="fa fa-lock prefix"></i>
-                      </span>
+                  <div class="form-group">
+                    <div class="md-form form-sm input-group mb-4">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="cPass">
+                          <i class="fa fa-lock prefix"></i>
+                        </span>
+                      </div>
+                      <input type="password" id="confirmPass" class="form-control form-control-sm validate"
+                        placeholder="Confirm Password" required />
                     </div>
-                    <input type="password" id="newPass"
-                      class="form-control form-control-sm validate mx-sm rounded-right" placeholder="New Password"
-                      aria-describedby="passwordHelpInline" required />
-                    <small id="passwordHelpInline" class="text-muted ml-3 mt-1">
-                      *Must be 8-20 characters long.
-                    </small>
                   </div>
-                </div>
-                <div class="form-group">
-                  <div class="md-form form-sm input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="cPass">
-                        <i class="fa fa-lock prefix"></i>
-                      </span>
-                    </div>
-                    <input type="password" id="confirmPass" class="form-control form-control-sm validate"
-                      placeholder="Confirm Password" required />
+                  <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="tc" required>
+                    <label class="form-check-label" for="#tc">
+                      <a href="#termsandconditions" data-toggle="modal" role="tab">
+                        Agree to Terms & Conditions
+                      </a>
+                    </label>
                   </div>
-                </div>
-                <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="tc" required>
-                  <label class="form-check-label" for="#tc">
-                    <a href="#termsandconditions" data-toggle="modal" role="tab">
-                      Agree to Terms & Conditions
-                    </a>
-                  </label>
-                </div>
-                <div class="text-center form-sm mt-2">
-                  <button class="btn btn-light">
-                    Sign up <i class="fa fa-sign-in ml-1"></i>
-                  </button>
-                </div>
-              </form>
-            </div>
+                  <div class="text-center form-sm mt-2">
+                    <button class="btn btn-light">
+                      Sign up <i class="fa fa-sign-in ml-1"></i>
+                    </button>
+                  </div>
+                </form>
+              </div>
               <div class="modal-footer">
                 <div class="options text-right">
                   <p class="pt-1">
