some changes to product/sell

--- a/product.html
+++ b/product.html
@@ -111,7 +111,7 @@
               </div>
               <br />
               <span class="lead">Product Type</span>
-              <div class="btn-group-toggle" data-toggle="buttons">
+              <div class="btn-group-toggle" data-toggle="buttons" id="protypes">
                 <label class="btn btn-dark">
                   <input type="radio" name="options" autocomplete="off" />Carton Box
                 </label>
