--- a/sell.html
+++ b/sell.html
@@ -206,6 +206,7 @@
                     <option value="1">Male</option>
                     <option value="2">Female</option>
                     <option value="3">Other Genders</option>
+                    <option value="4">Not Disclosed</option>
                   </select>
                 </div>
                 <div class="col-md-4 mb-4 input-group">
@@ -213,7 +214,7 @@
                     <label class="input-group-text" for="request"><i class="fa fa-question"></i></label>
                   </div>
                   <select class="custom-select" id="request">
-                    <option selected>What do you request?</option>
+                    <option selected>What is their job type?</option>
                     <option value="1">Assassin</option>
                     <option value="2">Bodyguard</option>
                     <option value="3">Fetch/Robber</option>
