--- a/index_logged.html
+++ b/index_logged.html
@@ -112,7 +112,7 @@
         </div>
         <div class="container mt-5" style="top:40% !important;">
           <h1 class="text-center p-3 text-white">Underground</h1>
-          <form method="POST" action="test.php" role="search">
+          <form method="POST" action="search.php" role="search">
             <div class="form-group input-group mb-3">
               <input type="text" class="field form-control w-50" placeholder="Search here..." name="entity"
                 aria-label="entity" aria-describedby="entity-search" value="" />
@@ -290,7 +290,7 @@
           <div class="tab-content">
             <div class="tab-pane fade in show active" id="login" role="tabpanel">
               <div class="modal-body mb-1">
-                <form method="POST" action="test.php" role="form">
+                <form method="POST" action="login.php" role="form">
                   <div class="form-group">
                     <div class="md-form form-sm input-group mt-5 mb-5">
                       <div class="input-group-prepend">
@@ -337,7 +337,7 @@
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel">
               <div class="modal-body">
-                <form method="POST" action="test.php" role="form">
+                <form method="POST" action="register.php" role="form">
                   <div class="form-group">
                     <div class="md-form form-sm input-group mt-5 mb-4">
                       <div class="input-group-prepend">
