--- a/update.html
+++ b/update.html
@@ -26,7 +26,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="justify-content-end" style="width: 60%">
-      <form method="POST" action="test.php" role="search">
+      <form method="POST" action="search.php" role="search">
         <div class="form-group input-group ">
           <input type="text" class="field form-control rounded-left" placeholder="Search here..." name="entity"
             aria-label="entity" aria-describedby="entity-search" value="" />
@@ -84,7 +84,7 @@
       <div class="tab-pane active" id="home" role="tabpanel">
         <div class="container p-3">
           <h2 class="text-logored">Edit Your Product</h2>
-          <form method="POST" action="test.php" role="form">
+          <form method="POST" action="editpro.php" role="form">
             <div class="form-group">
               <div class="form-md input-group mt-5 mb-4">
                 <div class="input-group-prepend">
@@ -548,7 +548,7 @@ Brand: Ferrero
           <div class="tab-content">
             <div class="tab-pane fade in show active" id="login" role="tabpanel">
               <div class="modal-body mb-1">
-                <form method="POST" action="test.php" role="form">
+                <form method="POST" action="login.php" role="form">
                   <div class="form-group">
                     <div class="md-form form-sm input-group mt-5 mb-5">
                       <div class="input-group-prepend">
@@ -595,13 +595,14 @@ Brand: Ferrero
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel">
               <div class="modal-body">
-                <form method="POST" action="test.php" role="form">
+                <form method="POST" action="register.php" role="form" id="fregister"
+enctype="multipart/form-data">
                   <div class="form-group">
                     <div class="md-form form-sm input-group mt-5 mb-4">
                       <div class="input-group-prepend">
-                        <span class="input-group-text" id="nEmail"><i class="fa fa-envelope prefix"></i></span>
+                        <span class="input-group-text" name="nemail" id="nEmail"><i class="fa fa-envelope prefix"></i></span>
                       </div>
-                      <input type="email" id="newEmail" class="form-control form-control-sm validate"
+                      <input type="email" id="newEmail" name="nemail" class="form-control form-control-sm validate"
                         placeholder="New Email Address" required />
                     </div>
                   </div>
@@ -610,11 +611,8 @@ Brand: Ferrero
                       <div class="input-group-prepend">
                         <span class="input-group-text" id="nUser"><i class="fa fa-user-circle-o prefix"></i></span>
                       </div>
-                      <input type="text" id="username" class="form-control form-control-sm validate rounded-right"
+                      <input type="text" id="username" name="nuser" class="form-control form-control-sm validate rounded-right"
                         placeholder="Username" aria-describedby="userHelpInline" required />
-                      <small id="userHelpInline" class="text-muted ml-3 mt-1">
-                        *Minimum of 8 characters, must have letters, numbers, and any special characters.
-                      </small>
                     </div>
                   </div>
 
@@ -625,7 +623,7 @@ Brand: Ferrero
                           <div class="input-group-prepend">
                             <span class="input-group-text" id="nFName"><i class="fa fa-user-o prefix"></i></span>
                           </div>
-                          <input type="text" id="fname" class="form-control form-control-sm validate"
+                          <input type="text" id="fname" name="fname" class="form-control form-control-sm validate"
                             placeholder="First Name (Optional)" />
                         </div>
                       </div>
@@ -636,7 +634,7 @@ Brand: Ferrero
                           <div class="input-group-prepend">
                             <span class="input-group-text" id="nLName"><i class="fa fa-user-o prefix"></i></span>
                           </div>
-                          <input type="text" id="lname" class="form-control form-control-sm validate"
+                          <input type="text" id="lname" name="lname" class="form-control form-control-sm validate"
                             placeholder="Last Name (Optional)" />
                         </div>
                       </div>
@@ -649,12 +647,9 @@ Brand: Ferrero
                           <i class="fa fa-lock prefix"></i>
                         </span>
                       </div>
-                      <input type="password" id="newPass"
+                      <input type="password" id="newPass" name="npass"
                         class="form-control form-control-sm validate mx-sm rounded-right" placeholder="New Password"
                         aria-describedby="passwordHelpInline" required />
-                      <small id="passwordHelpInline" class="text-muted ml-3 mt-1">
-                        *Must be 8-20 characters long.
-                      </small>
                     </div>
                   </div>
                   <div class="form-group">
@@ -664,12 +659,12 @@ Brand: Ferrero
                           <i class="fa fa-lock prefix"></i>
                         </span>
                       </div>
-                      <input type="password" id="confirmPass" class="form-control form-control-sm validate"
+                      <input type="password" id="confirmPass" name="cpass" class="form-control form-control-sm validate"
                         placeholder="Confirm Password" required />
                     </div>
                   </div>
                   <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="tc" required>
+                    <input type="checkbox" class="form-check-input" name="ragree" id="tc" required>
                     <label class="form-check-label" for="#tc">
                       <a href="#termsandconditions" data-toggle="modal" role="tab">
                         Agree to Terms & Conditions
@@ -677,7 +672,7 @@ Brand: Ferrero
                     </label>
                   </div>
                   <div class="text-center form-sm mt-2">
-                    <button class="btn btn-light">
+                    <button class="btn btn-light" type="submit" form="fregister" name="reg">
                       Sign up <i class="fa fa-sign-in ml-1"></i>
                     </button>
                   </div>
